# starq-3d-sbmpo

./: CMakeLists.txt  README.md  occupancy.csv  sbmpo_docker.bat  sbmpo_docker.sh  sdf.csv
my_project/: CMakeLists.txt
my_project/csv/: config.csv  nodes.csv  stats.csv
my_project/include/my_project/: MyCustomModel.hpp  MyCustomModel.hpp.bak  Occupancy3D.hpp  SDF3D.hpp
my_project/matlab/: Animation.m  ConfigureSBMPO.m  VisualizeResults.m  animation.fig  mindist_nodes.csv  mindist_stats.csv  minenergy_stats.csv  plot_mindist_path_yay.mat  sbmpo_results.m  sbmpo_stats.m  swim_stats.csv
my_project/matlab/stl/: driftwood.stl  robot.stl
my_project/src/: main.cpp
ordonez_stl_files/: ONR_3d_env.asv  ONR_3d_env.m  Rail.stl  pier_simple.stl  planning_env.asv  saveOccGrid.m  saveSDF.m  toSDF.m
